# gt-deeprl-proj-options

./: .gitignore  .gitmodules  Expr1_Cheetah.ipynb  Expr1_Cheetah.py  Expr1_HalfCheetah.ipynb  NOTES.md  pyproject.toml
agents/brax/: __init__.py  ppo_runner.py
drl_options/agents/: __init__.py
drl_options/agents/brax/: ppo_runner.py
drl_options/configs/mujoco/: cartpole_balance.toml
drl_options/envs/: __init__.py
drl_options/ext/: rsl_rl_utils.py  train_rsl_rl.py
drl_options/misc/: check_deps_version.py
drl_options/scripts/: train.py
envs/: __init__.py  dm_control.py
