[project]
name = "gt-deeprl-proj-options"
version = "0.0.1"
description = "Deep reinforcement learning project for GT CS 8803 (Deep RL) - Options algorithms."
requires-python = ">=3.11,<3.13"
# dependencies = [
#     "torch>=2.0,<3.0",
#     "rsl-rl-lib>=3.0,<4.0",
#     "playground>=0.0.5",
#     "brax>=0.13,<0.14",
#     "jax>=0.8,<0.9",
#     "ml-collections>=1.0.0,<2.0",
# ]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
# python = ">=3.11,<3.14"
python = ">=3.11,<3.13"

[tool.pixi.pypi-dependencies]
playground = "*"
rsl-rl-lib = "*"
torch = "*"
brax = "*"
jax = "*"
ml-collections = "*"
